# context_agent

./: .gitignore  .l10nignore  .nextcloudignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  REUSE.toml  healthcheck.sh  pyproject.toml  requirements.txt  test.env
.github/workflows/: appstore-build-publish.yml  integration_test.yml
.tx/: config
appinfo/: info.xml
ex_app/lib/: agent.py  cli.py  files.py  freebusy_finder.py  graph.py  jsonplus.py  local_model.py  logger.py  main.py  mcp_server.py  memorysaver.py  model.py  nc_model.py  provider.py  signature.py  task_processing.py  tools.py
ex_app/lib/all_tools/: ai.py  (+37 more)
l10n/: an.js  an.json  ar.js  ar.json  ast.js  ast.json  bg.js  bg.json  br.js  br.json  ca.js  ca.json  cs.js  cs.json  da.js  da.json  de.js  de.json  de_DE.js  de_DE.json  el.js  el.json  en_GB.js  en_GB.json  eo.js  eo.json  es.js  es.json  es_CO.js  es_PA.json  et_EE.js  et_EE.json  eu.js  eu.json  fa.js  fa.json  fi.js  fi.json  fr.js  fr.json  (+72 more)
scripts/: measure_context_size.py
translationfiles/an/: context_agent.po
translationfiles/ar/: context_agent.po
translationfiles/ast/: context_agent.po
translationfiles/bg/: context_agent.po
translationfiles/br/: context_agent.po
translationfiles/ca/: context_agent.po
translationfiles/cs/: context_agent.po
translationfiles/da/: context_agent.po
translationfiles/de/: context_agent.po
translationfiles/de_DE/: context_agent.po
translationfiles/el/: context_agent.po
translationfiles/en_GB/: context_agent.po
translationfiles/eo/: context_agent.po
translationfiles/es/: context_agent.po
translationfiles/es_419/: context_agent.po
translationfiles/es_AR/: context_agent.po
translationfiles/es_CL/: context_agent.po
translationfiles/es_CO/: context_agent.po
translationfiles/es_CR/: context_agent.po
translationfiles/es_DO/: context_agent.po
(+57 files in other folders)
